updated gulp script to allow ftp

--- a/style.less
+++ b/style.less
@@ -97,10 +97,6 @@ body {
     cursor: pointer;
 }
 
-.site {
-    padding-top: 28px;
-}
-
 h1,
 h2,
 h3,
@@ -195,8 +191,7 @@ a {
 .dark {
     background: rgb(28, 28, 28);
     background: -moz-linear-gradient(top, rgba(28, 28, 28, 1) 0%, rgba(47, 47, 47, 1) 100%);
-    background: -webk
-it-gradient(linear, left top, left bottom, color-stop(0%, rgba(28, 28, 28, 1)), color-stop(100%, rgba(47, 47, 47, 1)));
+    background: -webk it-gradient(linear, left top, left bottom, color-stop(0%, rgba(28, 28, 28, 1)), color-stop(100%, rgba(47, 47, 47, 1)));
     background: -webkit-linear-gradient(top, rgba(28, 28, 28, 1) 0%, rgba(47, 47, 47, 1) 100%);
     background: -o-linear-gradient(top, rgba(28, 28, 28, 1) 0%, rgba(47, 47, 47, 1) 100%);
     background: -ms-linear-gradient(top, rgba(28, 28, 28, 1) 0%, rgba(47, 47, 47, 1) 100%);
@@ -349,7 +344,8 @@ nav.navbar {
 }
 
 //
-// 7.0 Front Page
+// Front Page
+//
 .font-page-blog-photo {
     position: relative;
     background-size: cover;
@@ -435,7 +431,9 @@ nav.navbar {
     }
 }
 
+//
 // Front Page Post
+//
 nav.post-navigation {
     li a {
         background: none;
@@ -460,7 +458,9 @@ button.show-more {
     }
 }
 
+//
 // Front Page Projects
+//
 .projects-wrapper {
     .project-live {
         cursor: pointer;
@@ -535,7 +535,9 @@ button.show-more {
     }
 }
 
-// 7.2 projetc modal
+//
+// Project modal
+//
 .modal {
     img {
         width: 100%;
@@ -644,7 +646,6 @@ button.show-more {
         box-sizing: border-box;
         img {
             width: 100%;
-            //border: 1px solid currentcolor;
         }
     }
     #loading-logo {
@@ -711,7 +712,9 @@ button.show-more {
     }
 }
 
+//
 // Blog
+//
 .post {
     .post-title {
         margin-bottom: 0;
@@ -725,7 +728,9 @@ button.show-more {
     }
 }
 
+//
 // Footer
+//
 footer {
     color: white;
     background: #222222;
